--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 body {
-    font-family: 'Inter', sans-serif;
+  font-family: 'Inter', sans-serif;
 }
 
 body:hover > #trailer {
-    opacity: 1;
+  opacity: 1;
 }
 
 .animate-fade-in {
@@ -29,95 +29,94 @@ body:hover > #trailer {
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .hide-scrollbar::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .hide-scrollbar {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
 .trailer {
-    @apply w-5 h-5 bg-primary rounded-full fixed left-0 top-0 z-[999999999] pointer-events-none opacity-0 grid place-items-center;
-    transition: opacity 500ms ease;
+  @apply w-5 h-5 bg-primary rounded-full fixed left-0 top-0 z-[999999999] pointer-events-none opacity-0 grid place-items-center;
+  transition: opacity 500ms ease;
 }
 
-#trailer:not([data-type=""]) > #trailer-icon {
+#trailer:not([data-type='']) > #trailer-icon {
   opacity: 1;
 }
 
 #trailer-icon {
   font-size: 6px;
   line-height: 4px;
-  
+
   opacity: 0;
   transition: opacity 400ms ease;
 }
 
 .poppins {
-    font-family: 'Poppins', sans-serif ;
+  font-family: 'Poppins', sans-serif;
 }
 
 .active {
-    @apply text-primary
+  @apply text-primary;
 }
 
 .active-dark {
-    @apply text-primary
+  @apply text-primary;
 }
 
 .navbar-fixed {
-    @apply fixed z-[9999] bg-white bg-opacity-70 backdrop-blur-sm dark:bg-dark dark:bg-opacity-50;
-    box-shadow: inset 0 -1px 0 0 rgba(0,0,0,0.1);
+  @apply fixed z-[9999] bg-white bg-opacity-70 backdrop-blur-sm dark:bg-dark dark:bg-opacity-50;
+  box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
 }
 
 .hamburger-line {
-    @apply w-[30px] h-[2px] my-2 block bg-dark dark:bg-white;
+  @apply w-[30px] h-[2px] my-2 block bg-dark dark:bg-white;
 }
 
 .hamburger-active > span:nth-child(1) {
-    @apply rotate-45;
+  @apply rotate-45;
 }
 
 .hamburger-active > span:nth-child(2) {
-    @apply scale-0;
+  @apply scale-0;
 }
 
 .hamburger-active > span:nth-child(3) {
-    @apply -rotate-45;
+  @apply -rotate-45;
 }
 
-
 .loader {
-    width: 48px;
-    height: 48px;
-    border-radius: 50%;
-    display: block;
-    margin:15px auto;
-    position: relative;
-    box-sizing: border-box;
-    animation: rotation 1s linear infinite;
-  }
-  .loader::after,
-  .loader::before {
-    content: '';  
-    box-sizing: border-box;
-    position: absolute;
-    left: 0;
-    top: 0;
-    background: #8b5cf6;
-    width: 16px;
-    height: 16px;
-    transform: translate(-50%, 50%);
-    border-radius: 50%;
-  }
-  .loader::before {
-    left: auto;
-    right: 0;
-    background: #FFF;
-    transform: translate(50%, 100%);
-  }
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: block;
+  margin: 15px auto;
+  position: relative;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+.loader::after,
+.loader::before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: #8b5cf6;
+  width: 16px;
+  height: 16px;
+  transform: translate(-50%, 50%);
+  border-radius: 50%;
+}
+.loader::before {
+  left: auto;
+  right: 0;
+  background: #fff;
+  transform: translate(50%, 100%);
+}
 
 @keyframes rotation {
   0% {
@@ -126,4 +125,19 @@ body:hover > #trailer {
   100% {
     transform: rotate(360deg);
   }
-} 
+}
+
+/* Untuk Webkit (Chrome, Safari, Opera) */
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
+/* Untuk Firefox */
+* {
+  -moz-tap-highlight-color: transparent;
+}
+
+/* Untuk Internet Explorer */
+* {
+  -ms-tap-highlight-color: transparent;
+}
