--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  font-family: 'Inter', sans-serif;
+  font-family: 'inter', sans-serif;
 }
 
 body:hover > #trailer {
@@ -23,6 +23,15 @@ body:hover > #trailer {
   font-family: 'poppins';
   src: url('/src/fonts/poppins-regular-webfont.woff2') format('woff2'),
     url('/src/fonts/poppins-regular-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'inter';
+  src: url('/src/fonts/inter-regular-webfont.woff2') format('woff2'),
+    url('/src/fonts/inter-regular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -59,7 +68,6 @@ body:hover > #trailer {
   opacity: 0;
   transition: opacity 400ms ease;
 }
-
 
 .active {
   @apply text-primary;
